--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,4 @@
+@import 'src/stylesheets/normalize';
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
