feature: added main logic

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,1 @@
-<app-layout></app-layout>
+<app-layout [categories]="categories" (searchFormSubmit)=" searchFormSubmitHandler($event)"></app-layout>
