--- a/src/app/favourites/components/favourite/favourite.component.scss
+++ b/src/app/favourites/components/favourite/favourite.component.scss
@@ -1,3 +1,7 @@
+:host {
+    margin-top: 30px;
+}
+
 .favourite-card {
   padding: 20px;
   width: 400px;
@@ -7,6 +11,7 @@
   background-color: #ffffff;
   box-sizing: border-box;
 }
+
 
 .favourite-header {
   padding-bottom: 5px;
