--- a/src/app/ui/theme/layout/components/main/main.component.html
+++ b/src/app/ui/theme/layout/components/main/main.component.html
@@ -1,2 +1,2 @@
-<app-joke-search-form></app-joke-search-form>
-<app-jokes-layout></app-jokes-layout>
+<app-joke-search-form [categoriesInput]="categories" (searchFormSubmit)="searchFormSubmitHandler($event)"></app-joke-search-form>
+<app-jokes-layout></app-jokes-layout>  
