--- a/src/app/core/components/button-groups/button-groups.component.scss
+++ b/src/app/core/components/button-groups/button-groups.component.scss
@@ -4,14 +4,15 @@
 }
 
 .group-button {
+  margin-top: 15px;
   padding: 6px 20px;
   background-color: #ffffff;
   border-radius: 6px;
   font-size: 14px;
-  // line-height: 0;
   letter-spacing: 2px;
 }
 
-button + button {
-  margin-left: 15px;
+.group-button:first-of-type, 
+.group-button  + .group-button  {
+  margin-right: 15px;
 }
