--- a/src/app/favourites/components/favourites-layout/favourites-layout.component.scss
+++ b/src/app/favourites/components/favourites-layout/favourites-layout.component.scss
@@ -2,6 +2,8 @@
   padding: 40px;
   width: 680px;
   background-color: #F8F8F8;
+  display: flex;
+  flex-direction: column;
 }
 
 .favourites-heading {
