--- a/src/app/jokes/components/joke/joke.component.html
+++ b/src/app/jokes/components/joke/joke.component.html
@@ -1,20 +1,22 @@
 <div class="joke-card">
   <div class="joke-header">
-    <mat-icon aria-label="Empty heart icon" svgIcon="appEmptyHeart"></mat-icon>
+    <button mat-icon-button aria-label="Add to Favourite" (click)="toggleFavouriteStatus(joke)">
+      <mat-icon aria-label="Empty heart icon" [svgIcon]="joke.isFavourite ? 'appHeart' : 'appEmptyHeart'"></mat-icon>
+    </button>
   </div>
   <div class="joke-body">
     <div class="joke-icon">
       <mat-icon aria-label="Message icon" svgIcon="appMessage"></mat-icon>
     </div>
     <div class="joke-content">
-      <div class="joke-id"><span class="text-gray">ID:</span><a href="https://google.com.ua">12123123123123123213<mat-icon aria-label="Message icon" svgIcon="appLink"></mat-icon></a></div>
+      <div class="joke-id"><span class="text-gray">ID:</span><a [href]="joke.url">{{joke.id}}<mat-icon aria-label="Message icon" svgIcon="appLink"></mat-icon></a></div>
       <div class="joke-text">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus animi alias optio, similique pariatur id doloremque, eos quaerat repellendus reprehenderit eligendi commodi rem maiores ut assumenda, esse accusamus. Consequatur, labore.</p>
+        <p>{{joke.value}}</p>
       </div>
       <div class="joke-footer">
         <span class="joke-date text-gray"> Last update: 666 hours ago</span>
-        <div  class="joke-category">
-          <span>Category</span>
+        <div  class="joke-category" *ngFor="let category of joke.categories">
+          <span>{{category | uppercase}}</span>
         </div>
       </div>
     </div>
