--- a/src/app/jokes/components/jokes-layout/jokes-layout.component.html
+++ b/src/app/jokes/components/jokes-layout/jokes-layout.component.html
@@ -1,1 +1,3 @@
-<app-joke></app-joke>
+<ng-container *ngIf="$jokes | async; let jokes">
+  <app-joke *ngFor="let joke of jokes" [joke]="joke"></app-joke>
+</ng-container>
