--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,7 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; color:#333333; box-sizing: border-box; }
+
+.mat-radio-ripple {
+  display: none;
+}
