fix: changed name

--- a/src/app/ui/theme/layout/components/header/header.component.html
+++ b/src/app/ui/theme/layout/components/header/header.component.html
@@ -1,4 +1,4 @@
-<h1>MSI 2020</h1>
+<h1>Chuck Norris Jokes</h1>
 <!-- <button mat-mini-fab color="primary" aria-label="Example icon button with a menu icon">
   <mat-icon>menu</mat-icon>
 </button> -->
